--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - 8006:3306
         volumes:
             - mysql_data:/var/lib/mysql
-            - ./server/db:/docker-entrypoint-initdb.d
+            - ./server/data:/docker-entrypoint-initdb.d
     adminer:
         image: adminer:latest
         restart: always
