--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,22 @@
   "author": "Panagiotis Panagi",
   "license": "UNLICENSED",
   "private": true,
+  "scripts": {
+    "dev": "ts-node index.ts",
+    "start": "ts-node index.ts"
+  },
   "dependencies": {
-    "mysql2": "^2.2.5"
+    "@types/node": "^14.11.2",
+    "apollo-server-express": "^2.18.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "knex": "^0.21.6",
+    "mysql2": "^2.2.5",
+    "objection": "^2.2.3",
+    "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0"
   }
 }
