--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,10 @@
   "private": true,
   "scripts": {
     "dev": "ts-node index.ts",
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "lint": "eslint -c .eslintrc.js --cache --ext .js,.jsx,.ts,.tsx --format=pretty ."
   },
   "dependencies": {
-    "@types/node": "^14.11.2",
     "apollo-server-express": "^2.18.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -22,6 +22,15 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-formatter-pretty": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "ts-node": "^9.0.0"
   }
 }
