--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.0",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0",
     "styled-components": "^5.2.0"
